PCS BAckup 26Dec2023/Backup-Source/objects/Vision_Customer_Product_Log__c.object
<CustomObject>
    <fields>
        <fullName>Phoenix_Bid_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bid Line Item</label>
        <referenceTo>Phoenix_Bid_Line_Item__c</referenceTo>
        <relationshipLabel>Customer Product Logs</relationshipLabel>
        <relationshipName>Customer_Product_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Status__c</fullName>
        <label>Bid Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Bid_Type__c</fullName>
        <label>Bid Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>Customer Product Logs</relationshipLabel>
        <relationshipName>Customer_Product_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer_Response_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Response Line</label>
        <referenceTo>Phoenix_Customer_Response_Line__c</referenceTo>
        <relationshipLabel>Customer Product Logs</relationshipLabel>
        <relationshipName>Customer_Product_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Product Logs</relationshipLabel>
        <relationshipName>Customer_Product_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_FY_Business_Impact__c</fullName>
        <formula>IF( ISNULL(Phoenix_Price_Effective_Value_To__c) , ( Vision_Awarded_Volume__c   * ( Vision_Impacted_Months__c / 12))*   Vision_Deadnet_Price__c ,   Vision_Awarded_Volume__c  *((((Phoenix_Price_Effective_Value_To__c-Phoenix_Price_Effective_Value_From__c)/365)*12)/12)*   Vision_Deadnet_Price__c  )</formula>
        <label>FY Business Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_NPR_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NPR Data</label>
        <referenceTo>Phoenix_NPR_Data__c</referenceTo>
        <relationshipLabel>Customer Product Logs</relationshipLabel>
        <relationshipName>Customer_Product_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Existing_Product__c</fullName>
        <label>New / Existing Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Product</fullName>
                </value>
                <value>
                    <fullName>Existing Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Deadnet_Price__c</fullName>
        <label>Previous Deadnet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Volume__c</fullName>
        <label>Previous Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Value_From__c</fullName>
        <label>Price Effective Value From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Price_Effective_Value_To__c</fullName>
        <label>Price Effective Value To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Product Logs</relationshipLabel>
        <relationshipName>Customer_Product_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Annual_Impact__c</fullName>
        <formula>Vision_Awarded_Volume__c *  Vision_Deadnet_Price__c</formula>
        <label>Annual Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Annual_Volume__c</fullName>
        <label>Annual Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Awarded_Annual_Value__c</fullName>
        <formula>( Vision_Awarded_Volume__c   * ( Vision_Impacted_Months__c / 12))*   Vision_Deadnet_Price__c</formula>
        <label>Awarded Annual Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Awarded_Volume__c</fullName>
        <label>Awarded Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Awarded_Year__c</fullName>
        <formula>TEXT(YEAR( Phoenix_Price_Effective_Value_From__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Deadnet_Price__c</fullName>
        <label>Deadnet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Impacted_Months__c</fullName>
        <formula>IF(MONTH(Phoenix_Price_Effective_Value_From__c)&gt;3, ((DATEVALUE(TEXT(YEAR(Phoenix_Price_Effective_Value_From__c)+1) + &quot;-03-31&quot;) -  Phoenix_Price_Effective_Value_From__c)/365)*12, ((DATEVALUE(TEXT(YEAR(Phoenix_Price_Effective_Value_From__c)) + &quot;-03-31&quot;) -  Phoenix_Price_Effective_Value_From__c)/365)*12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impacted Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Customer Product Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Phoenix_Product__c</columns>
        <columns>Phoenix_Contract__c</columns>
        <columns>Phoenix_NPR_Data__c</columns>
        <columns>Phoenix_Status__c</columns>
        <columns>Phoenix_New_Existing_Product__c</columns>
        <columns>Phoenix_Price_Effective_Value_From__c</columns>
        <columns>Phoenix_Price_Effective_Value_To__c</columns>
        <columns>Vision_Impacted_Months__c</columns>
        <columns>Vision_Awarded_Annual_Value__c</columns>
        <columns>Vision_Annual_Impact__c</columns>
        <columns>Phoenix_FY_Business_Impact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPLog-{000000}</displayFormat>
        <label>Customer Product Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>